[project]
name = "chatgpt"
description = "Extra Nodes for Comfy UI"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/SamTyurenkov/comfyui_amt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "samtyurenkov"
DisplayName = "comfyui_amt"
Icon = ""
